2007-08-21 [holger]	0.11cvs5

	* ChangeLog
	* README
	* configure.ac
	* src/Makefile.am
	* src/notification_lcdproc.c
	* src/notification_lcdproc.h
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
		Add a new module: lcdproc
		to display the status of new and unread messages
		on an external LCD. Needs a LCDd server up and running.
		This is a rewrite of the former LCDProc plugin
		for Sylpheed-Claws (GTK1 branch) which is copyrighted by
		Leandro Pereira.
		The module is not built by default until I can find my
		soldering iron and actually test with my old LCD (instead
		of just using the LCDd curses driver).

2007-08-20 [holger]	0.11cvs4

	* src/notification_core.c
	* src/notification_core.h
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
		Add an option to restrict the maximum number of
		messages in the banner module. Having too many messages there
		causes too high system load. Defaults to 100. This restriction
		can be deactivated by setting the option to 0.
		Thanks to Mykilx and Paul for reporting.

2007-08-16 [paul]	0.11cvs3

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-11 [colin]	0.11cvs2

	* src/notification_plugin.c
		Specify license better (GPL2+)

2007-07-07 [paul]	0.11cvs1

	* configure.ac
	* po/fi.po
		added by Flammie Pirinen

2007-07-03 [paul]	0.11

	* 0.11 released

2007-07-03 [paul]	0.10cvs7

	* configure.ac
	* po/zh_CN.po
		added by Ralgh Young
	* po/hu.po
	* po/pt_BR.po
		updated by Pader Rezso and Frederico
		Goncalves Guimaraes
		

2007-06-21 [colin]	0.10cvs6

	* src/notification_plugin.c
		Update plugin API

2007-06-08 [wwp]	0.10cvs5

	* configure.ac
		Bumped required version.

2007-06-08 [colin]	0.10cvs4

	* src/notification_popup.c
		Fix build

2007-06-07 [paul]	0.10cvs3

	* src/notification_popup.c
		fix crash when Subject is empty
		patch by Gianni Ceccarelli <dakkar@users.sf.net>

2007-04-20 [wwp]	0.10cvs2

	* configure.ac