@@ -53,3 +53,4 @@
 ( cvs diff -u -r 1.1.2.75 -r 1.1.2.76 configure.ac;  ) > 0.11cvs3.patchset
 ( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/notification_core.c;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/notification_core.h;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/notification_plugin.c;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/notification_prefs.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/notification_prefs.h;  ) > 0.11cvs4.patchset
 ( cvs diff -u -r 1.1.2.74 -r 1.1.2.75 ChangeLog;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 README;  cvs diff -u -r 1.1.2.77 -r 1.1.2.78 configure.ac;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/Makefile.am;  diff -u /dev/null src/notification_lcdproc.c;  diff -u /dev/null src/notification_lcdproc.h;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/notification_plugin.c;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/notification_prefs.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/notification_prefs.h;  ) > 0.11cvs5.patchset
+( cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/notification_core.c;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/notification_core.h;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/notification_lcdproc.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/notification_lcdproc.h;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/notification_plugin.c;  ) > 0.11cvs6.patchset
