@@ -22,12 +22,14 @@
 
 #ifdef NOTIFICATION_LCDPROC
 
+#include <glib.h>
+
 #define LCDPROC_SPECIFIC_FOLDER_ID_STR "lcd"
 
 void notification_lcdproc_connect(void);
 void notification_lcdproc_disconnect(void);
 
-void notification_update_lcdproc(void);
+void notification_update_lcdproc(guint, guint);
 
 #endif /* NOTIFICATION_LCDPROC */
 
